--- a/notebooks/flight-test.ipynb
+++ b/notebooks/flight-test.ipynb
@@ -21,6 +21,24 @@
     "print(sys.version)\n",
     "print('Pandas version: ', pd.__version__)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7d8b7edb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teste\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('teste')"
+   ]
   }
  ],
  "metadata": {
